test/sematest/invalid/unknown_class2.java
class main2 {
  public main2 main;
  public static void main(String[] args) {
    int main = 4;
    new main().main(new main());
    new main().main = new main();
  }
  public main main(main main){
    return main(main(main));
  }
}